# ml-slowfast-llava

./: .gitignore  ACKNOWLEDGEMENTS.md  README.md  dataset.py  prompt.py  pyproject.toml  run_demo.py  run_inference.py  run_inference_generative_qa.py  run_inference_multiple_choice_qa.py  run_inference_video_qa.py  setup_env.sh  utils.py
cfgs/: slowfast_llava_34b-resize-slow_10frms_spatial_1d_max_pool_fast_4x4-50_frms.yaml  slowfast_llava_7b-resize-slow_10frms_spatial_1d_max_pool_fast_4x4-50_frms.yaml
eval/: eval_generative_qa.py  eval_multiple_choice_qa.py  eval_prompt.py  eval_video_qa.py
scripts/: run_eval_activitynet.sh  run_eval_consistency.sh  run_eval_egoschema.sh  run_eval_generativebench.sh  run_eval_generic.sh  run_eval_intentqa.sh  run_eval_msrvtt.sh  run_eval_msvd.sh  run_eval_multiplechoiceqabench.sh  run_eval_nextqa.sh  run_eval_temporal.sh  run_eval_tgif.sh  run_eval_videoqabench.sh
scripts/data/: prepare_activitynet_qa_file.py  prepare_egoschema_qa_file.py  prepare_intentqa_qa_file.py  prepare_msrvtt_qa_file.py  prepare_msvd_qa_file.py  prepare_nextqa_qa_file.py  prepare_tgif_qa_file.py  prepare_vcgbench_qa_file.py
slowfast_llava/llava/: mm_utils.py
slowfast_llava/llava/model/: builder.py  llava_arch.py
slowfast_llava/llava/model/language_model/: llava_llama.py
