[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sf_llava"
version = "1.2.2.post1"
description = "A Strong Training-Free Video LLM"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.2.0", "torchvision==0.17.0",
    "transformers==4.38.2", "tokenizers==0.15.1", "sentencepiece==0.1.99", "shortuuid==1.0.13",
    "accelerate==0.21.0", "peft==0.4.0", "bitsandbytes==0.41.0",
    "pydantic", "markdown2[all]", "numpy==1.26.4", "scikit-learn==1.5.0",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
    "openai==1.14.3", "peft==0.4.0", "safetensors==0.4.3",
    "decord", "opencv-python", "pytorchvideo==0.1.5",
]

[project.optional-dependencies]
train = ["deepspeed==0.12.6", "ninja", "wandb"]
build = ["build", "twine"]

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
